# kbarcode-kde4

./: CMakeLists.txt  ChangeLog  kbarcode-kde4.spec  kbarcode.kdev4  kbarcode.spec
dev_notes/: compilation.warnings.001.txt  runtime.errors.001.txt  runtime.warnings.001.txt  using.source.files.001.txt
po/: CMakeLists.txt  de.po  el.po  es.po  extract-messages.sh  fi.po  fr.po  hu.po  it.po  kbarcode.pot  nl.po  pl.po  sv.po  tr.po  uk.po
src/: CMakeLists.txt  barcodecombo.cpp  barcodecombo.h  barcodegenerator.cpp  barcodegenerator.h  barcodeitem.cpp  barcodeitem.h  barkode.cpp  barkode.h  batchassistant.cpp  batchassistant.h  batchprinter.h  commands.cpp  commands.h  confassistant.cpp  confassistant.h  csvfile.cpp  csvfile.h  databasebrowser.cpp  databasebrowser.h  definition.cpp  documentitem.cpp  documentitem.h  dsrichtext.cpp  dstextedit.cpp  dstextedit.h  encodingcombo.cpp  imageitem.cpp  imageitem.h  kbarcode.cpp  kbarcode.h  kbarcodesettings.cpp  kbarcodesettings.h  label.cpp  label.h  labeleditor.cpp  labeleditor.h  labelutils.cpp  lineitem.cpp  lineitem.h  (+39 more)
src/desktop/: CMakeLists.txt  kbarcode-batch.desktop  kbarcode-editor.desktop  kbarcode-kde4-batch.desktop  kbarcode-kde4-editor.desktop  kbarcode-kde4-label.desktop  kbarcode-kde4-single.desktop  kbarcode-kde4.desktop  kbarcode-single.desktop  kbarcode.desktop
src/dialogs/: barcodedialogs.cpp  configdialog.cpp  configdialog.h  csvimportdlg.cpp  csvimportdlg.h  definitiondialog.cpp  documentitemdlg.cpp  documentitemdlg.h  multilineeditdlg.cpp  multilineeditdlg.h  previewdialog.cpp  printlabeldlg.cpp  printlabeldlg.h  rectsettingsdlg.cpp  rectsettingsdlg.h  smalldialogs.cpp  smalldialogs.h  tokendialog.cpp  tokendialog.h
src/html/: CMakeLists.txt  barcodes.html
src/pics/: CMakeLists.txt
src/ps/: CMakeLists.txt  barcode.ps
src/sql/: CMakeLists.txt  exampledata.sql  labeldefinitions.sql
src/xml/: CMakeLists.txt  databasebrowserui.rc  labeleditorui.rc  mainwindowui.rc  rules.xml
